# Cpp-Projects

./: README.md
Engine_App/: CMakeLists.txt  main.cpp
Engine_App/cmake_build/: CMakeCache.txt  Makefile  cmake_install.cmake
Engine_App/cmake_helpers/: helpers.cmake
Engine_App/common/: CommonDefines.h
Engine_App/engine/: Engine.cpp  Engine.h  EngineConfigLoader.cpp
Engine_App/engine/config/: EngineConfig.h
Engine_App/game/: Game.cpp  Game.h
Engine_App/game/config/: GameCfg.h
Engine_App/include/common/: CommonDefines.h
Engine_App/include/engine/: Engine.h  EngineConfigLoader.h
Engine_App/include/engine/config/: EngineConfig.h
Engine_App/include/game/: Game.h
Engine_App/include/game/buttons/: WheelButton.h
Engine_App/include/game/config/: GameCfg.h
Engine_App/include/game/entities/: Hero.h  Wheel.h
Engine_App/include/game/proxies/: GameProxy.h
Engine_App/manager_utils/: CMakeLists.txt
Engine_App/manager_utils/include/manager_utils/config/: DrawMgrCfg.h  ManagerHandlerCfg.h  RsrcMgrCfg.h
Engine_App/manager_utils/include/manager_utils/drawing/: Image.h  Text.h  Widget.h
Engine_App/manager_utils/include/manager_utils/input/: ButtonBase.h
Engine_App/manager_utils/include/manager_utils/managers/: DrawMgr.h  ManagerHandler.h  MgrBase.h  RsrcMgr.h  TimerMgr.h
Engine_App/manager_utils/include/manager_utils/time/: TimerClient.h  TimerData.h
Engine_App/manager_utils/src/drawing/: Image.cpp  Text.cpp  Widget.cpp
Engine_App/manager_utils/src/input/: ButtonBase.cpp
Engine_App/manager_utils/src/managers/: DrawMgr.cpp  ManagerHandler.cpp  RsrcMgr.cpp  TimerMgr.cpp
Engine_App/manager_utils/src/time/: TimerClient.cpp
Engine_App/sdl_utils/: CMakeLists.txt  InputEvent.cpp  MonitorWindow.cpp  MonitorWindow.h  Renderer.cpp  Renderer.h  SDLLoader.cpp  Texture.cpp  Texture.h
Engine_App/sdl_utils/containers/: ImageContainer.cpp  ImageContainer.h  TextContainer.cpp  TextContainer.h
Engine_App/sdl_utils/include/sdl_utils/: InputEvent.h  MonitorWindow.h  Renderer.h  SDLLoader.h  Texture.h
Engine_App/sdl_utils/include/sdl_utils/config/: ImageContainerCfg.h  MonitorWindowCfg.h  TextContainerCfg.h
Engine_App/sdl_utils/include/sdl_utils/containers/: ImageContainer.h  TextContainer.h
Engine_App/sdl_utils/src/: InputEvent.cpp  MonitorWindow.cpp  Renderer.cpp  SDLLoader.cpp  Texture.cpp
Engine_App/sdl_utils/src/containers/: ImageContainer.cpp  TextContainer.cpp
Engine_App/src/: main.cpp
Engine_App/src/engine/: Engine.cpp  EngineConfigLoader.cpp
Engine_App/src/game/: Game.cpp
Engine_App/src/game/buttons/: WheelButton.cpp
Engine_App/src/game/entities/: Hero.cpp  Wheel.cpp
Engine_App/utils/: CMakeLists.txt
Engine_App/utils/drawing/: Color.h  DrawParams.h  Point.cpp  Point.h  Rectangle.cpp  Rectangle.h
Engine_App/utils/include/utils/drawing/: Color.h  DrawParams.h  Point.h  Rectangle.h
Engine_App/utils/include/utils/thread/: ThreadUtils.h
Engine_App/utils/include/utils/time/: Time.h
Engine_App/utils/src/drawing/: Color.cpp  DrawParams.cpp  Point.cpp  Rectangle.cpp
Engine_App/utils/src/thread/: ThreadUtils.cpp
Engine_App/utils/src/time/: Time.cpp
Engine_App/utils/thread/: ThreadUtils.cpp
Engine_App/utils/time/: Time.cpp
QNX_Server_Application/: Client.cpp  Client.h  CommunicationChanel.cpp  CommunicationChanel.h  DI Introductory QNX Project_v01 01.docx  IClient.cpp  IClient.h  Main.cpp  OperationsDefines.h  Server.cpp  Server.h
Server_Client_App/: MemoryPool.h  Shared_Memory_Client.cpp  Shared_Memory_Server.cpp
